k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkwithmentor
  labels:
    name: linkwithmentor
    environment: production
